--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <noscript>
-      <strong
+      <strong :
         >We're sorry but platzi-exchange doesn't work properly without
         JavaScript enabled. Please enable it to continue.</strong
       >
